--- a/BIL1001-Odev1.html
+++ b/BIL1001-Odev1.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h2>2019 Güz Döneminin ilk ödevi</h2>
+<h2>2019 GÃ¼z DÃ¶neminin ilk Ã¶devi</h2>
+<p>Arslan Begmyradov / Ogr.num:2019280073</p>
 <label for="id1">Metin kutusu 1</label>
 <input type='text' id='id1' /> 
 <br>
@@ -16,6 +17,6 @@
 <label for="id4">Metin kutusu 4</label>
 <input type='text' id='id4' /> 
 <br><br>
-<button type="button">Yapıştır</button>
+<button type="button">YapÃ½Ã¾tÃ½r</button>
 </body>
 </html>
